TCA: fix alignment

--- a/config/chroot_local-includes/usr/share/tails/tca/tca.css
+++ b/config/chroot_local-includes/usr/share/tails/tca/tca.css
@@ -19,7 +19,7 @@
 /* Generic }}} */
 
 /* Bridge step {{{ */
-#step_bridge_label_explain_hide { margin-left: 1.5em; }
+#step_bridge_label_explain_hide { margin-left: 18px; }
 /* Bridge step }}} */
 
 /* Progress step {{{ */
